OpenHealth/force-app/main/default/force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Medical Insurance Provider</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Insurance Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>