OpenHealth/force-app/main/default/force-app/main/default/objects/Insurance__c/CoverageEndDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageEndDate__c</fullName>
    <label>CoverageEndDate</label>
    <type>Date</type>
    <length>255</length>
</CustomField>