OpenHealth/force-app/main/default/force-app/main/default/objects/Insurance__c/CoverageStartDate__c.field-meta.xml
<CustomField>
    <fullName>CoverageStartDate__c</fullName>
    <label>CoverageStartDate</label>
    <type>Date</type>
</CustomField>