OpenHealth/force-app/main/default/force-app/main/default/objects/Insurance__c/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>